--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,3 +6,8 @@
 input[disabled] {pointer-events:none}
 input[type="checkbox"] {margin-right: 10px}
 li {margin-top: 20px}
+
+.ui-tooltip {
+  background: #616161e6;
+  border-radius: 4px;
+}
