--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,3 +46,21 @@
     </main>
   </body>
 </html>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+  $(document).ready(function() {
+    $("li").click(function() {
+      var checked = $(this).find('[type=checkbox]').prop("checked");
+      $(this).find('[type=checkbox]').prop('checked', !checked);
+    });
+   $(document).tooltip({
+      show: {
+        effect: "slideDown",
+        delay: 150
+      }
+    });
+  });
+</script>
