--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,3 +24,12 @@ label {
   text-transform: uppercase;
   box-shadow: 0 0 7px black;
 }
+
+.main-content blockquote {
+    padding: 0 1rem;
+    margin-left: 0;
+    color: #819198;
+    background-color: #e3f2ff;
+    border-left: 0.3rem solid #dce6f0;
+    font-style: italic;
+}
