--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <a id="skip-to-content" href="#content">Ir para o conteúdo.</a>
 
     <header class="page-header" role="banner">
-      <a href="/" style:"color:white"><h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1></a>
+      <a href="/" style="color:white"><h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1></a>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
         <a href="{{ site.github.repository_url }}" class="btn">Ver no GitHub</a>
